--- a/angular/src/app/plaza/plaza.component.html
+++ b/angular/src/app/plaza/plaza.component.html
@@ -14,7 +14,7 @@
             {{jugador.nombre}}
         </h3>
 
-        <button (click)="addVoto(Rol.aldeano, jugador.id)">VOTA ALDEANO</button>
+        <button (click)="addVoto('aldeano', jugador.id)">VOTA ALDEANO</button>
       <p matLine>
 
       </p>
