Fixes to template checks to deploy

--- a/angular/src/app/plaza/plaza.component.html
+++ b/angular/src/app/plaza/plaza.component.html
@@ -22,5 +22,5 @@
   </mat-list>
 
 
-<button (click)="addVoto('lobo')">VOTA LOBO</button>
+<!--button (click)="addVoto('lobo', jugador.id)">VOTA LOBO</button-->
 <button (click)="siguienteTurno()">siguiente turno</button>
