--- a/angular/src/app/lista-jugadores/lista-jugadores.component.html
+++ b/angular/src/app/lista-jugadores/lista-jugadores.component.html
@@ -6,20 +6,20 @@
   <mat-list-item *ngFor="let jugador of jugadores | async">
     <img matListAvatar src="" alt="" />
       <h3 matLine *ngIf="!jugador.estado">
-      	<del>{{jugador.nombre}}</del> 
+      	<del>{{jugador.nombre}}</del>
       </h3>
       <h3 matLine *ngIf="jugador.estado">
       	{{jugador.nombre}}
       </h3>
     <p matLine>
-         
+
     </p>
     </mat-list-item>
 </mat-list>
 
 
-<mat-list>
+<!--mat-list>
   <mat-list-item *ngFor="let voto of votacion_aldeanos | async">
    {{voto.nominado.nombre}} - {{voto.votante.nombre}}
     </mat-list-item>
-</mat-list>
+</mat-list-->
