--- a/angular/src/app/partida/partida.component.html
+++ b/angular/src/app/partida/partida.component.html
@@ -7,9 +7,9 @@
   </mat-tab>
 
   <mat-tab label="Chat">
-    <app-chat>
+    <app-chat-rooms>
       <!-- Aqui chats -->
-    </app-chat>
+    </app-chat-rooms>
   </mat-tab>
 
   <mat-tab label="Plaza">
