--- a/angular/src/app/plaza/plaza.component.html
+++ b/angular/src/app/plaza/plaza.component.html
@@ -4,22 +4,14 @@
 
 </ng-container>
 
-<mat-list>
-    <mat-list-item *ngFor="let jugador of jugadores">
-      <img matListAvatar src="" alt="" />
-        <h3 matLine *ngIf="!jugador.estado">
-            <del>{{jugador.nombre}}</del>
-        </h3>
-        <h3 matLine *ngIf="jugador.estado">
-            {{jugador.nombre}}
-        </h3>
+<mat-grid-list cols="4" rowHeight="100px" id="tablero">
+    <mat-grid-tile *ngFor="let jugador of jugadores; index as i">
+        <input type="image" *ngIf="!jugador.estado"  src="../../assets/casas/casa-{{i + 1}}.png" alt="{{jugador.nombre}}"/>
+        <input type="image" *ngIf="jugador.estado" src="../../assets/casas/casa-{{i + 1}}-day.png" alt="{{jugador.nombre}}" (click)="addVoto('aldeano', jugador.id)"/>
 
-        <button (click)="addVoto('aldeano', jugador.id)">VOTA ALDEANO</button>
-      <p matLine>
-
-      </p>
-      </mat-list-item>
-  </mat-list>
+        <!--<button (click)="addVoto('aldeano', jugador.id)">VOTA {{i+1}}</button>-->
+    </mat-grid-tile>
+  </mat-grid-list>
 
 
 <!--button (click)="addVoto('lobo', jugador.id)">VOTA LOBO</button-->
