Reput chat rooms

--- a/angular/src/app/partida/partida.component.html
+++ b/angular/src/app/partida/partida.component.html
@@ -1,9 +1,9 @@
 <div class="flex-container">
   <div class="app">
     <h3>Chat</h3>
-    <app-chat>
+    <app-chat-rooms>
       <!-- Aqui lista de jugadores y nominaciones -->
-    </app-chat>
+    </app-chat-rooms>
   </div>
   <mat-divider [vertical]="true"></mat-divider>
   <div id="plaza" class="app">
