--- a/angular/src/app/plaza/plaza.component.scss
+++ b/angular/src/app/plaza/plaza.component.scss
@@ -3,10 +3,15 @@
 
 }
 #tablero{
+    max-width: 100%; 
+}
+#tablero table{
     max-width: 100%;
-   
+    max-height: 100%;
+    display: flex;
 }
 input[type="image" i] {
     width: 100%;
     height: 100%;
+    display: flex;
 }
