--- a/angular/src/app/chat/chat.component.html
+++ b/angular/src/app/chat/chat.component.html
@@ -6,6 +6,7 @@
                  [message]="message"
                  [playerId]="playerId"
                  [index]="i"
+                 [isLobo]="isLobo"
                  class="chat-message">
     </app-message>
   </div>
