--- a/angular/src/app/message/message.component.scss
+++ b/angular/src/app/message/message.component.scss
@@ -1,7 +1,7 @@
 .avatar {
     display: inline-block;
     border-radius: 60px;
-    box-shadow: 0px 0px 2px #888;
+    box-shadow: 0px 0px 1px #888;
     padding: 0.5em 0.6em;
     height: 30px;
     width: 30px;
@@ -17,7 +17,8 @@
     display: flex;
     flex-direction: row;
     align-items: stretch;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
+    margin-top: 15px;
     margin-right: 25px;
 }
 
@@ -31,7 +32,8 @@
     border: 1px solid;
     padding-left: 10px;
     margin-top: 0;
-    box-shadow: 5px 10px 8px 10px #888888;
+    box-shadow: 5px 10px 8px 0px #888888;
+    background-color: white;
 }
 
 .message-header{
