--- a/angular/src/app/chat-rooms/chat-rooms.component.html
+++ b/angular/src/app/chat-rooms/chat-rooms.component.html
@@ -23,4 +23,4 @@
   </mat-expansion-panel>
 </mat-accordion>
 
-<mat-slide-toggle [(ngModel)]="loboRole">Soy lobo</mat-slide-toggle>
+<!--mat-slide-toggle [(ngModel)]="loboRole">Soy lobo</mat-slide-toggle-->
