--- a/angular/src/app/chat-rooms/chat-rooms.component.html
+++ b/angular/src/app/chat-rooms/chat-rooms.component.html
@@ -9,7 +9,7 @@
     [isLobo]="false"></app-chat>
 
   </mat-expansion-panel>
-  <mat-expansion-panel *ngIf="loboRole"
+  <mat-expansion-panel *ngIf="loboRol"
                         class="chat-room chat-lobo"
                        (opened)="panelOpenState = true"
                        (closed)="panelOpenState = false">
